applications/manifests/secure-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-api
  namespace: secure-api
  labels:
    app.kubernetes.io/name: secure-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: secure-api
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secure-api
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: secure-api
          image: hashicorp/http-echo
          imagePullPolicy: IfNotPresent
          args:
            - -listen=:8080
            - -text=secure-api
          ports:
            - name: app-port
              containerPort: 8080
          resources:
            requests:
              cpu: 0.125
              memory: 50Mi
